syntax = "proto3";

option csharp_namespace = "ShoppingCartService";

service ShoppingCart {
	rpc GetShoppingCart (GetShoppingCartRequest) returns (UserShoppingCartResponse) {}
	rpc UpdateShoppingCart(UpdateShoppingCartRequest) returns (UserShoppingCartResponse) {}
    rpc DeleteShoppingCart(DeleteShoppingCartRequest) returns (DeleteUserShoppingCartResponse) {}
}

message GetShoppingCartRequest {

}

message UserShoppingCartResponse {
	repeated ShoppingCartItem Items =1;
}

message ShoppingCartItem {
	string gameId = 1;
	int32 quantity = 2;
}

message UpdateShoppingCartRequest {
    repeated ShoppingCartItem items = 2;
}

message DeleteShoppingCartRequest {
}

message DeleteUserShoppingCartResponse {
}